<resources>
    <string name="app_name">ShuttleMe</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_admin">Administrator</string>
    <string name="title_main_activity">GPS Coordinates</string>
    <string name="title_activity_driver_manager">Driver Manager</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_request_register">Not a member? Register</string>
    <string name="action_register">Register!</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="phone_hint">Phone Number</string>
    <string name="prompt_email_conformation">Confirm Email</string>
    <string name="prompt_password_confirmation">Confirm Password</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_email_taken">This email is already in use</string>
    <string name="error_email_mismatch">Check that emails match</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_password_mismatch">Check that passwords match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="get_connection_error">Server error</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_passenger">PassengerActivity</string>
    <string name="title_activity_administrator">AdministratorActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_route_manager">RouteManager</string>
    <string name="title_activity_driver">DriverActivity</string>

    <string name="check_out">Check Out</string>
    <string name="check_in">Check In</string>
    <string name="title_activity_splash">SplashActivity</string>S
</resources>
