<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="lawrence.edu.shuttleme.LoginActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"/>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/user_name"
                    android:layout_width="322dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:hint="Name"
                    android:inputType="text"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="322dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_hint"
                    android:inputType="phone"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="322dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="322dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/register_button"
                style="@style/AppTheme.NoActionBar"
                android:layout_width="322dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:background="@color/Lawrence_secondary_blue"
                android:textColor="@color/default_color"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:text="@string/action_register"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|bottom"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Already have an account?"
                    android:textColor="@color/Lawrence_secondary_blue"
                    android:layout_marginTop="65dp"/>

                <Button
                    android:id="@+id/back_to_login"
                    style="@style/AppTheme.NoActionBar"
                    android:layout_gravity="center|center_horizontal"
                    android:layout_height="40dp"
                    android:text="@string/action_sign_in"
                    android:background="@color/Lawrence_primary_grey"
                    android:textColor="@color/default_color"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textSize="15sp"
                    android:layout_width="150dp"
                    android:layout_marginTop="5dp"/>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>
