<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="lawrence.edu.shuttleme.LoginActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme"/>

    </android.support.design.widget.AppBarLayout>

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        style="@style/AppTheme.NoActionBar">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="322dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textSize="20sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="322dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="20sp"
                    android:typeface="sans" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="@style/AppTheme.NoActionBar"
                android:layout_width="322dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:background="@color/Lawrence_secondary_blue"
                android:textColor="@color/default_color"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="3"
            android:gravity="center|bottom"
            android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Need an account?"
                    android:textColor="@color/Lawrence_secondary_blue"
                    android:layout_marginTop="205dp"/>

                <Button
                    android:id="@+id/request_register_button"
                    style="@style/AppTheme.NoActionBar"
                    android:layout_gravity="center|center_horizontal"
                    android:layout_height="40dp"
                    android:text="@string/action_request_register"
                    android:background="@color/Lawrence_primary_grey"
                    android:textColor="@color/default_color"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textSize="15sp"
                    android:layout_width="150dp"
                    android:layout_marginTop="5dp"/>

        </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>
